--- a/app/src/main/res/drawable/draw_button.xml
+++ b/app/src/main/res/drawable/draw_button.xml
@@ -1,4 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-
-</selector>
+<shape xmlns:android="http://schemas.android.com/apk/res/android"
+    android:shape="rectangle">
+    <solid android:color="#92b7bda9" />
+    <corners android:bottomRightRadius="9dp"
+        android:bottomLeftRadius="9dp"
+        android:topRightRadius="9dp"
+        android:topLeftRadius="9dp"/>
+</shape>
