--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -3,27 +3,33 @@
     android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">
+    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
+    android:background="#92b7bda9">
 
     <TextView android:text="@string/enter_word" android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/textView" />
+        android:id="@+id/textView"
+        android:textSize="25dp"
+  />
 
     <EditText
 
         android:layout_width="match_parent"
-        android:layout_height="70px"
+        android:layout_height="80px"
+        android:hint="@string/enter_char"
         android:id="@+id/editText"
-        android:layout_marginTop="42dp"
+        android:inputType="text|textNoSuggestions"
+        android:digits="abcdefghijklmnopqrstuvwxyz"
+        android:layout_marginTop="25dp"
         android:layout_below="@+id/textView"
-
-              />
-    <TextView
+ />
+   <!-- <TextView
         android:layout_width="wrap_content"
         android:layout_height="70px"
         android:hint="multiplication"
         android:id="@+id/viewMul"
-        android:layout_below="@+id/editText"/>
+        android:visibility="gone"
+        android:layout_below="@+id/editText"/>-->
 
 
 
@@ -33,16 +39,46 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
+        android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true" />
 
     <TextView
         android:id="@+id/yourWord"
         android:text="@string/your_word"
         android:layout_width="wrap_content"
+        android:textStyle="bold"
+        android:layout_marginTop="25dp"
         android:layout_height="wrap_content"
         android:layout_below="@+id/btnGet"/>
 
+   <!-- <ProgressBar
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        style="?android:attr/progressBarStyleSmall"
+        android:id="@+id/progress_bar"
+        android:layout_below="@+id/btnGet"
+        android:progressDrawable="@drawable/draw_progress_bar"
+        />-->
+    <Button
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/btnSpeech"
+        android:layout_below="@+id/yourWord"
+        android:text="@string/speech_word"
+        style="?android:attr/buttonStyleSmall"
+        android:background="@drawable/draw_button"
+        android:visibility="gone"/>
 
+    <ImageButton
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/imageButton"
+        android:src="@drawable/volume3"
+        android:layout_toRightOf="@+id/yourWord"
+        android:layout_alignParentLeft="@+id/yourWord"
+        android:layout_alignTop="@+id/yourWord"
+
+         />
 
 
 </RelativeLayout>
