--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,11 +6,7 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#92b7bda9">
 
-    <TextView android:text="@string/enter_word" android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/textView"
-        android:textSize="25dp"
-  />
+
 
     <EditText
 
@@ -42,14 +38,6 @@
         android:layout_marginTop="25dp"
         android:layout_centerHorizontal="true" />
 
-    <TextView
-        android:id="@+id/yourWord"
-        android:text="@string/your_word"
-        android:layout_width="wrap_content"
-        android:textStyle="bold"
-        android:layout_marginTop="25dp"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnGet"/>
 
    <!-- <ProgressBar
         android:layout_width="wrap_content"
@@ -59,7 +47,7 @@
         android:layout_below="@+id/btnGet"
         android:progressDrawable="@drawable/draw_progress_bar"
         />-->
-    <Button
+   <!-- <Button
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/btnSpeech"
@@ -67,18 +55,39 @@
         android:text="@string/speech_word"
         style="?android:attr/buttonStyleSmall"
         android:background="@drawable/draw_button"
-        android:visibility="gone"/>
+        android:visibility="gone"/>-->
 
-    <ImageButton
+
+    <TableLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:id="@+id/imageButton"
-        android:src="@drawable/volume3"
-        android:layout_toRightOf="@+id/yourWord"
-        android:layout_alignParentLeft="@+id/yourWord"
-        android:layout_alignTop="@+id/yourWord"
+        android:layout_below="@+id/btnGet"
+        android:layout_marginTop="25dp">
+        <TableRow>
+            <TextView
+                android:id="@+id/yourWord"
 
-         />
+                android:layout_width="wrap_content"
+
+                android:textSize="25dp"
+
+                android:layout_height="wrap_content"
+                android:layout_below="@+id/btnGet"/>
+
+
+
+            <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:id="@+id/imageButton"
+                android:src="@drawable/volume3"
+                android:layout_toRightOf="@+id/yourWord"
+                android:layout_alignParentLeft="@+id/yourWord"
+                android:layout_alignTop="@+id/yourWord"
+
+                />
+        </TableRow>
+        </TableLayout>
 
 
 </RelativeLayout>
