--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,88 +6,71 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#92b7bda9">
 
-
+<RelativeLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:id="@+id/relative_layout_child_1"
+    android:paddingRight="@dimen/activity_horizontal_margin"
+    android:paddingTop="@dimen/activity_vertical_margin"
+    android:paddingBottom="@dimen/activity_vertical_margin"
+    android:background="#92b7bda9">
 
     <EditText
-
         android:layout_width="match_parent"
         android:layout_height="80px"
         android:hint="@string/enter_char"
         android:id="@+id/editText"
-        android:inputType="text|textNoSuggestions"
-        android:digits="abcdefghijklmnopqrstuvwxyz"
         android:layout_marginTop="25dp"
         android:layout_below="@+id/textView"
- />
-   <!-- <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="70px"
-        android:hint="multiplication"
-        android:id="@+id/viewMul"
-        android:visibility="gone"
-        android:layout_below="@+id/editText"/>-->
-
-
-
+        />
     <Button
         android:id="@+id/btnGet"
         android:text="Get Word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_below="@+id/editText"
-        android:layout_marginTop="25dp"
-        android:layout_centerHorizontal="true" />
+        android:layout_marginTop="5dp"
+        android:onClick="viewOnClick"
+        android:layout_centerHorizontal="true"
+        android:layout_alignParentRight="true"/>
 
+</RelativeLayout>
 
-   <!-- <ProgressBar
-        android:layout_width="wrap_content"
+    <LinearLayout
+        android:id="@+id/linear_layout_child_2"
+        android:layout_below="@id/relative_layout_child_1"
+        android:layout_width="match_parent"
+        android:visibility="gone"
+        android:padding="5dp"
+        android:layout_height="wrap_content" >
+        <TextView
+            android:id="@+id/yourWord"
+            android:layout_width="match_parent"
+            android:gravity="center_horizontal"
+            android:text="Jumble Words"
+            android:textColor="@android:color/black"
+            android:textSize="25dp"
+            android:layout_height="match_parent"/>
+    </LinearLayout>
+     <ListView
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        style="?android:attr/progressBarStyleSmall"
-        android:id="@+id/progress_bar"
-        android:layout_below="@+id/btnGet"
-        android:progressDrawable="@drawable/draw_progress_bar"
-        />-->
-   <!-- <Button
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/btnSpeech"
-        android:layout_below="@+id/yourWord"
-        android:text="@string/speech_word"
-        style="?android:attr/buttonStyleSmall"
-        android:background="@drawable/draw_button"
-        android:visibility="gone"/>-->
+        android:visibility="gone"
+        android:id="@+id/word_listview"
+        android:layout_below="@id/linear_layout_child_2">
 
-
-    <TableLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_below="@+id/btnGet"
-        android:layout_marginTop="25dp">
-        <TableRow>
-            <TextView
-                android:id="@+id/yourWord"
-
-                android:layout_width="wrap_content"
-
-                android:textSize="25dp"
-
-                android:layout_height="wrap_content"
-                android:layout_below="@+id/btnGet"/>
+    </ListView>
 
 
 
-            <ImageButton
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:id="@+id/imageButton"
-                android:src="@drawable/volume3"
-                android:layout_toRightOf="@+id/yourWord"
-                android:layout_alignParentLeft="@+id/yourWord"
-                android:layout_alignTop="@+id/yourWord"
 
-                />
-        </TableRow>
-        </TableLayout>
+
+
+
+
+
+
+
 
 
 </RelativeLayout>
