--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -6,70 +6,62 @@
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
     android:background="#92b7bda9">
 
-<RelativeLayout
-    android:layout_width="match_parent"
-    android:layout_height="wrap_content"
-    android:id="@+id/relative_layout_child_1"
-    android:paddingRight="@dimen/activity_horizontal_margin"
-    android:paddingTop="@dimen/activity_vertical_margin"
-    android:paddingBottom="@dimen/activity_vertical_margin"
-    android:background="#92b7bda9">
+    <RelativeLayout
+        android:id="@+id/relative_layout_child_1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:paddingRight="@dimen/activity_horizontal_margin"
+        android:paddingTop="@dimen/activity_vertical_margin"
+        android:paddingBottom="@dimen/activity_vertical_margin"
+        android:background="#92b7bda9">
 
     <EditText
         android:layout_width="match_parent"
-        android:layout_height="80px"
+        android:layout_height="60dp"
         android:hint="@string/enter_char"
         android:id="@+id/editText"
-        android:layout_marginTop="25dp"
-        android:layout_below="@+id/textView"
-        />
+        android:inputType="text|textNoSuggestions"
+        android:digits="abcdefghijklmnopqrstuvwxyz "
+        android:layout_alignParentTop="true"/>
+
     <Button
         android:id="@+id/btnGet"
         android:text="Get Word"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_below="@+id/editText"
-        android:layout_marginTop="5dp"
         android:onClick="viewOnClick"
-        android:layout_centerHorizontal="true"
-        android:layout_alignParentRight="true"/>
+        android:layout_below="@+id/editText"
+        android:layout_alignParentRight="true"
+        android:layout_marginTop="5dp" />
 
-</RelativeLayout>
+        </RelativeLayout>
+
 
     <LinearLayout
         android:id="@+id/linear_layout_child_2"
         android:layout_below="@id/relative_layout_child_1"
         android:layout_width="match_parent"
-        android:visibility="gone"
         android:padding="5dp"
+        android:visibility="gone"
+        android:orientation="vertical"
         android:layout_height="wrap_content" >
         <TextView
             android:id="@+id/yourWord"
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
-            android:text="Jumble Words"
+            android:padding="5dp"
+            android:text="UnJumble Words"
             android:textColor="@android:color/black"
-            android:textSize="25dp"
+            android:textSize="20dp"
             android:layout_height="match_parent"/>
+
+        <ListView
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:id="@+id/word_listview">
+        </ListView>
+
     </LinearLayout>
-     <ListView
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:visibility="gone"
-        android:id="@+id/word_listview"
-        android:layout_below="@id/linear_layout_child_2">
-
-    </ListView>
-
-
-
-
-
-
-
-
-
-
 
 
 
