--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -4,7 +4,17 @@
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
     android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity"
-    android:background="#92b7bda9">
+    android:background="#fbe9e7">
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="ARE YOU JUMBLED?"
+        android:layout_alignParentTop="true"
+        android:id="@+id/ruJumbled"
+        android:textSize="20dp"
+        android:layout_centerHorizontal="true"
+        android:textStyle="bold"
+        android:textColor="#000000"/>
 
     <RelativeLayout
         android:id="@+id/relative_layout_child_1"
@@ -13,16 +23,18 @@
         android:paddingRight="@dimen/activity_horizontal_margin"
         android:paddingTop="@dimen/activity_vertical_margin"
         android:paddingBottom="@dimen/activity_vertical_margin"
-        android:background="#92b7bda9">
+        android:background="#a1887f"
+        android:layout_below="@+id/ruJumbled"
+        >
 
     <EditText
         android:layout_width="match_parent"
         android:layout_height="60dp"
         android:hint="@string/enter_char"
         android:id="@+id/editText"
-        android:inputType="text|textNoSuggestions"
-        android:digits="abcdefghijklmnopqrstuvwxyz "
-        android:layout_alignParentTop="true"/>
+
+        android:layout_alignParentTop="true"
+        />
 
     <Button
         android:id="@+id/btnGet"
@@ -32,7 +44,8 @@
         android:onClick="viewOnClick"
         android:layout_below="@+id/editText"
         android:layout_alignParentRight="true"
-        android:layout_marginTop="5dp" />
+        android:layout_marginTop="5dp"
+        android:background="#fbe9e7"/>
 
         </RelativeLayout>
 
@@ -50,15 +63,16 @@
             android:layout_width="match_parent"
             android:gravity="center_horizontal"
             android:padding="5dp"
-            android:text="UnJumble Words"
+            android:text="UNJUMBLED WORDS"
             android:textColor="@android:color/black"
-            android:textSize="20dp"
+            android:textSize="15dp"
             android:layout_height="match_parent"/>
 
         <ListView
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:id="@+id/word_listview">
+            android:id="@+id/word_listview"
+            android:background="#a1887f">
         </ListView>
 
     </LinearLayout>
